--- a/cdk/package.json
+++ b/cdk/package.json
@@ -21,6 +21,10 @@
     "typescript": "~3.9.7"
   },
   "dependencies": {
+    "@aws-cdk/aws-glue": "^1.110.1",
+    "@aws-cdk/aws-iam": "^1.110.1",
+    "@aws-cdk/aws-s3": "^1.110.1",
+    "@aws-cdk/aws-s3-deployment": "^1.110.1",
     "@aws-cdk/core": "1.110.1",
     "source-map-support": "^0.5.16"
   }
